<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/view_space"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center_vertical|end"
        android:paddingTop="140sp"
        android:text="=1023445"
        android:textSize="40sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="391dp"
        android:layout_height="0dp"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_space"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/clear"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/square_root_button"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/square_root"
            android:textSize="40dp"
            app:layout_constraintStart_toEndOf="@id/clear_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/divide_button"
            android:layout_width="123dp"
            android:layout_height="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="2dp"
            android:text="@string/divide"
            android:textSize="40dp"
            app:layout_constraintStart_toEndOf="@id/square_root_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/seven_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/seven"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clear_button" />

        <Button
            android:id="@+id/eight_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/eight"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/seven_button"
            app:layout_constraintTop_toBottomOf="@id/clear_button" />

        <Button
            android:id="@+id/nine_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/nine"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/eight_button"
            app:layout_constraintTop_toBottomOf="@id/square_root_button" />\

        <Button
            android:id="@+id/multiply_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/multiply"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/nine_button"
            app:layout_constraintTop_toBottomOf="@id/square_root_button" />

        <Button
            android:id="@+id/four_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/four"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seven_button" />

        <Button
            android:id="@+id/five_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/five"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/four_button"
            app:layout_constraintTop_toBottomOf="@id/eight_button" />

        <Button
            android:id="@+id/six_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/six"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/five_button"
            app:layout_constraintTop_toBottomOf="@id/nine_button" />

        <Button
            android:id="@+id/sub_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/subtract"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/six_button"
            app:layout_constraintTop_toBottomOf="@id/multiply_button" />

        <Button
            android:id="@+id/one_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/one"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/four_button" />

        <Button
            android:id="@+id/two_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/two"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/one_button"
            app:layout_constraintTop_toBottomOf="@id/five_button" />

        <Button
            android:id="@+id/three_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/three"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/two_button"
            app:layout_constraintTop_toBottomOf="@id/six_button" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/add"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/three_button"
            app:layout_constraintTop_toBottomOf="@id/sub_button" />

        <Button
            android:id="@+id/zero_button"
            android:layout_width="202dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:gravity="left|center_vertical"
            android:text="@string/zero"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/one_button" />

        <Button
            android:id="@+id/decimal_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/decimal"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/zero_button"
            app:layout_constraintTop_toBottomOf="@id/three_button" />

        <Button
            android:id="@+id/equal_button"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:text="@string/equal"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/decimal_button"
            app:layout_constraintTop_toBottomOf="@id/add_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>